# rust_machine_learn

./: .gitignore  Cargo.toml  README.md
.ipynb_checkpoints/: 02-Naive Bayes-checkpoint.ipynb
notebooks/: 01-primitives.ipynb  02-Naive Bayes.ipynb  03-Decision Tree.ipynb  05-Logistic regression.ipynb  05-SVM.ipynb  06-NN.md  08-kmeans.ipynb  decision_tree_census.tex  decision_tree_risc.tex  test.ipynb
notebooks/.ipynb_checkpoints/: 01-primitives-checkpoint.ipynb  02-Naive Bayes-checkpoint.ipynb  (+3 more)
notebooks/db/: census.csv  (+1 more)
studies/android/: Cargo.toml  README.md  build.rs  build.sh  settings.gradle.kts
studies/android/android/app/: build.gradle.kts
studies/android/android/app/src/main/java/com/example/androidrust/: NativeLib.kt  com_example_androidrust_NativeLib.h
studies/android/android/app/src/main/java/com/example/androidrust/ui/theme/: Theme.kt
studies/android/app/src/androidTest/java/com/example/androidrust/: ExampleInstrumentedTest.kt
studies/android/app/src/main/: AndroidManifest.xml
studies/android/app/src/main/java/com/example/androidrust/: MainActivity.kt
studies/android/app/src/main/java/com/example/androidrust/ui/theme/: Color.kt  Type.kt
studies/android/app/src/test/java/com/example/androidrust/: ExampleUnitTest.kt
studies/android/gradle/wrapper/: gradle-wrapper.properties
studies/android/src/: lib.rs
studies/burn-wgpu/: Cargo.toml  README.md
studies/burn-wgpu/src/: data.rs  main.rs  model.rs  model_ssd.rs  train.rs  train_ssd.rs
studies/burn-wgpu/src/utils/: display.rs  images.rs  l1loss.rs  mod.rs  utils.rs
studies/pytorch/: Cargo.toml  readme.md
studies/pytorch/src/: bee.rs  binary.rs  coke.rs  dataframe.rs  dataloader.rs  dogandcat.rs  imagedataset.rs  iris.rs  iris2.rs  main.rs  mnist.rs  utils.rs
tryonpython/: binary-catdog.pth  binary-mnist.pth  coke.py  coke.sh  dogandcat.py  dogandcat.sh  mnist.py  mnist.sh  state.sh  stateofdict.py
(+31 files in other folders)
