[package]
name = "android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release-space-optimized]
inherits = "release"
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true  # Enable link time optimization
codegen-units = 1  # Reduce parallel code generation units
panic = "abort"

