[package]
name = "burn-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
rand = "0.8.5"
ui = { path = "../ui" }
burn = { version = "0.14.0", features = ["autodiff","train","tch"] }
burn-wgpu = "0.14.0"
image = "0.25.2"
