[package]
name = "pytorch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.14.0"
torch-sys = "0.14.0"
csv = "1.1"
ndarray = "0.15"
ndarray-csv = "0.4"
polars = { version = "x", features = ["csv","describe","fmt","lazy","ndarray","dtype-categorical","to_dummies"]}
minifb = "0.22"
image = "0.24"
rayon = "1.5"
rand = "0.8"